--- a/index.html
+++ b/index.html
@@ -139,14 +139,13 @@
     hoverSound.volume = 0.5;
 
     const noTexts = [
-      "Are you sure? 🥺",
-      "Think again 😳",
-      "Wait wait 😭",
-      "Don’t break my heart 💔",
-      "Pleaseeee 🥹",
-      "That’s illegal 😤",
-      "Nice try 😏",
-      "You’re clicking the wrong one 🙃"
+      "BWTHB",
+      "nuh uh",
+      "beku pls",
+      "sopar alla",
+      "hellll nah",
+      "beda pls",
+      "pls begging"
     ];
 
     let noIndex = 0;
