--- a/index.html
+++ b/index.html
@@ -137,7 +137,20 @@
       'https://cdn.pixabay.com/download/audio/2022/03/15/audio_7c8a8a1f0a.mp3?filename=pop-94319.mp3'
     );
     hoverSound.volume = 0.5;
+    
+    let audioUnlocked = false;
 
+// unlock audio on first user interaction
+document.addEventListener('click', () => {
+  if (!audioUnlocked) {
+    hoverSound.play().then(() => {
+      hoverSound.pause();
+      hoverSound.currentTime = 0;
+      audioUnlocked = true;
+    }).catch(() => {});
+  }
+}, { once: true });
+    
     const noTexts = [
       "BWTHB",
       "nuh uh",
