--- a/index.html
+++ b/index.html
@@ -29,6 +29,7 @@
       background: linear-gradient(135deg, var(--cream), var(--pink));
       font-family: 'Montserrat', sans-serif;
       color: var(--text);
+      transition: transform 0.05s linear;
     }
 
     .card {
@@ -78,7 +79,6 @@
       border-radius: 999px;
       font-size: 1rem;
       cursor: pointer;
-      transition: transform 0.2s ease, box-shadow 0.2s ease;
     }
 
     #yesBtn {
@@ -87,15 +87,9 @@
       box-shadow: 0 8px 20px rgba(232,143,162,0.4);
     }
 
-    #yesBtn:hover {
-      transform: translateY(-2px);
-      box-shadow: 0 12px 24px rgba(232,143,162,0.5);
-    }
-
     #noBtn {
       background: #f1f1f1;
       color: var(--text);
-      position: relative;
     }
 
     .hidden {
@@ -132,53 +126,75 @@
     const text = document.getElementById('text');
     const buttons = document.getElementById('buttons');
 
-    // Sound effect
-    const hoverSound = new Audio(
-      'https://cdn.pixabay.com/download/audio/2022/03/15/audio_7c8a8a1f0a.mp3?filename=pop-94319.mp3'
+    /* ===============================
+       AUDIO (PROXIMITY-BASED)
+    =============================== */
+    const proximitySound = new Audio(
+      'https://cdn.pixabay.com/download/audio/2022/02/23/audio_2c5c9b9f94.mp3?filename=heartbeat-ambient-110624.mp3'
     );
-    hoverSound.volume = 0.5;
-    
+    proximitySound.loop = true;
+    proximitySound.volume = 0;
+
     let audioUnlocked = false;
 
-// unlock audio on first user interaction
-document.addEventListener('click', () => {
-  if (!audioUnlocked) {
-    hoverSound.play().then(() => {
-      hoverSound.pause();
-      hoverSound.currentTime = 0;
-      audioUnlocked = true;
-    }).catch(() => {});
-  }
-}, { once: true });
-    
-    const noTexts = [
-      "BWTHB",
-      "nuh uh",
-      "beku pls",
-      "sopar alla",
-      "hellll nah",
-      "beda pls",
-      "pls begging"
-    ];
+    document.addEventListener('click', () => {
+      if (!audioUnlocked) {
+        proximitySound.play().then(() => {
+          audioUnlocked = true;
+        }).catch(() => {});
+      }
+    }, { once: true });
 
-    let noIndex = 0;
+    /* ===============================
+       SCREEN SHAKE
+    =============================== */
+    function applyShake(intensity) {
+      const x = (Math.random() - 0.5) * intensity;
+      const y = (Math.random() - 0.5) * intensity;
+      document.body.style.transform = `translate(${x}px, ${y}px)`;
+    }
 
-    noBtn.addEventListener('mouseenter', () => {
-      // play sound
-      hoverSound.currentTime = 0;
-      hoverSound.play();
+    function resetShake() {
+      document.body.style.transform = 'translate(0, 0)';
+    }
 
-      // change text
-      noBtn.textContent = noTexts[noIndex % noTexts.length];
-      noIndex++;
+    /* ===============================
+       PROXIMITY DETECTION
+    =============================== */
+    document.addEventListener('mousemove', (e) => {
+      if (!audioUnlocked) return;
 
-      // move button
-      const x = Math.random() * 200 - 100;
-      const y = Math.random() * 200 - 100;
-      noBtn.style.transform = `translate(${x}px, ${y}px)`;
+      const rect = noBtn.getBoundingClientRect();
+      const centerX = rect.left + rect.width / 2;
+      const centerY = rect.top + rect.height / 2;
+
+      const dx = e.clientX - centerX;
+      const dy = e.clientY - centerY;
+      const distance = Math.sqrt(dx * dx + dy * dy);
+
+      const maxDistance = 300;
+      const proximity = Math.max(0, (maxDistance - distance) / maxDistance);
+
+      // Volume increases with proximity
+      proximitySound.volume = Math.min(1, proximity);
+
+      // Shake increases with proximity
+      const shakeIntensity = proximity * 25;
+
+      if (proximity > 0) {
+        applyShake(shakeIntensity);
+      } else {
+        resetShake();
+      }
     });
 
+    /* ===============================
+       YES BUTTON
+    =============================== */
     yesBtn.addEventListener('click', () => {
+      proximitySound.pause();
+      resetShake();
+
       title.textContent = 'Yay!!! 💘';
       text.innerHTML = 'You just made me the happiest person ever.<br><br>Will you be my Valentine? 🌹';
       buttons.classList.add('hidden');
