--- a/index.html
+++ b/index.html
@@ -2,9 +2,12 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Will You Be My Valentine?</title>
-  <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@500;700&family=Montserrat:wght@300;500&display=swap" rel="stylesheet">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <title>Valentine</title>
+
+  <!-- Fonts -->
+  <link href="https://fonts.googleapis.com/css2?family=DM+Serif+Display&family=Poppins:wght@300;400;500&display=swap" rel="stylesheet">
+
   <style>
     :root {
       --pink: #f6c1cc;
@@ -21,21 +24,22 @@
       display: flex;
       align-items: center;
       justify-content: center;
-      font-family: 'Montserrat', sans-serif;
+      font-family: 'Poppins', sans-serif;
       color: var(--text);
       overflow: hidden;
     }
 
-    /* Animated GIF background layer */
+    /* BACKGROUND GIF */
     .bg-gif {
       position: fixed;
       inset: 0;
-      background: url('https://media.giphy.com/media/l0MYB8Ory7Hqefo9a/giphy.gif') center / cover no-repeat;
-      opacity: 0.25;
+      background: url('GIF_BEFORE_YES.gif') center / contain no-repeat;
+      background-color: var(--cream);
       z-index: -2;
+      transition: opacity 0.4s ease, background-image 0.6s ease;
     }
 
-    /* Soft pink overlay */
+    /* SOFT OVERLAY */
     .bg-overlay {
       position: fixed;
       inset: 0;
@@ -45,23 +49,26 @@
     }
 
     .card {
-      background: white;
+      background: rgba(255,255,255,0.92);
+      backdrop-filter: blur(6px);
       padding: 3rem 2.5rem;
       border-radius: 24px;
       box-shadow: 0 20px 40px rgba(0,0,0,0.08);
       text-align: center;
       max-width: 420px;
       width: 90%;
-      position: relative;
     }
 
     h1 {
-      font-family: 'Playfair Display', serif;
+      font-family: 'DM Serif Display', serif;
       font-size: 2.2rem;
-      margin-bottom: 0.5rem;
+      margin-bottom: 1.5rem;
     }
 
-    p { margin-bottom: 2rem; }
+    p {
+      margin-bottom: 2rem;
+      line-height: 1.6;
+    }
 
     .buttons {
       display: flex;
@@ -71,112 +78,175 @@
 
     button {
       border: none;
-      padding: 0.75rem 1.5rem;
+      padding: 0.75rem 1.6rem;
       border-radius: 999px;
       font-size: 1rem;
       cursor: pointer;
     }
 
-    #yesBtn { background: var(--rose); color: white; }
-    #noBtn { background: #f1f1f1; }
+    .primary {
+      background: var(--rose);
+      color: white;
+    }
+
+    .secondary {
+      background: #f1f1f1;
+      color: var(--text);
+    }
 
     .hidden { display: none; }
   </style>
 </head>
+
 <body>
-  <div class="bg-gif"></div>
+
+  <div class="bg-gif" id="bgGif"></div>
   <div class="bg-overlay"></div>
 
   <div class="card">
-    <h1 id="title">Hey my love 💕</h1>
-    <p id="text">I have something important to ask you…</p>
 
-    <div class="buttons" id="buttons">
-      <button id="yesBtn">Yes 💖</button>
-      <button id="noBtn">No 🙃</button>
+    <!-- PAGE 1 -->
+    <div id="page1">
+      <h1>hey 👀</h1>
+      <div class="buttons">
+        <button class="primary" id="supBtn">sup?</button>
+      </div>
     </div>
+
+    <!-- PAGE 2 -->
+    <div id="page2" class="hidden">
+      <h1>Will you be my Valentine? 💖</h1>
+      <div class="buttons">
+        <button class="primary" id="yesBtn">Yes 💘</button>
+        <button class="secondary" id="noBtn">No 🙃</button>
+      </div>
+    </div>
+
   </div>
 
   <script>
-  const noBtn = document.getElementById('noBtn');
-  const yesBtn = document.getElementById('yesBtn');
-  const title = document.getElementById('title');
-  const text = document.getElementById('text');
-  const buttons = document.getElementById('buttons');
+    const supBtn = document.getElementById('supBtn');
+    const yesBtn = document.getElementById('yesBtn');
+    const noBtn = document.getElementById('noBtn');
+    const page1 = document.getElementById('page1');
+    const page2 = document.getElementById('page2');
+    const bgGif = document.getElementById('bgGif');
 
-  /* ===== AUDIO ===== */
-  const proximitySound = new Audio('https://cdn.pixabay.com/download/audio/2022/02/23/audio_2c5c9b9f94.mp3?filename=heartbeat-ambient-110624.mp3');
-  proximitySound.loop = true;
-  proximitySound.volume = 0;
+    /* ===== CONFIG ===== */
+    const gifAfterYes = 'GIF_AFTER_YES.gif';
 
-  let audioReady = false;
-  document.addEventListener('click', () => {
-    if (!audioReady) {
-      proximitySound.play();
-      audioReady = true;
+    const preload = new Image();
+    preload.src = gifAfterYes;
+
+    /* ===== AUDIO ===== */
+    const proximitySound = new Audio(
+      'https://cdn.pixabay.com/download/audio/2022/02/23/audio_2c5c9b9f94.mp3?filename=heartbeat-ambient-110624.mp3'
+    );
+    proximitySound.loop = true;
+    proximitySound.volume = 0;
+
+    let audioReady = false;
+    document.addEventListener('click', () => {
+      if (!audioReady) {
+        proximitySound.play();
+        audioReady = true;
+      }
+    }, { once: true });
+
+    /* ===== SHAKE STATE ===== */
+    let targetShake = 0.6;   // subtle idle
+    let currentShake = 0.6;
+    let shakeX = 0;
+    let shakeY = 0;
+    let shakingEnabled = true;
+
+    function shakeLoop() {
+      if (!shakingEnabled) return;
+
+      currentShake += (targetShake - currentShake) * 0.1;
+
+      shakeX += (Math.random() - 0.5) * currentShake;
+      shakeY += (Math.random() - 0.5) * currentShake;
+
+      shakeX *= 0.85;
+      shakeY *= 0.85;
+
+      document.body.style.transform = `translate(${shakeX}px, ${shakeY}px)`;
+      requestAnimationFrame(shakeLoop);
     }
-  }, { once: true });
+    shakeLoop();
 
-  /* ===== SHAKE STATE ===== */
-  let targetShake = 2;   // subtle idle shake
-  let currentShake = 2;
-  let shakeX = 0;
-  let shakeY = 0;
-  let shakingEnabled = true;
+    /* ===== PROXIMITY HANDLER ===== */
+    function handleProximity(e) {
+      if (
+        !audioReady ||
+        !shakingEnabled ||
+        page2.classList.contains('hidden') ||
+        yesBtn.matches(':hover')
+      ) return;
 
-  function shakeLoop() {
-    if (!shakingEnabled) return;
+      const point = e.touches ? e.touches[0] : e;
+      if (!point) return;
 
-    currentShake += (targetShake - currentShake) * 0.1;
+      const rect = noBtn.getBoundingClientRect();
+      const cx = rect.left + rect.width / 2;
+      const cy = rect.top + rect.height / 2;
 
-    shakeX += (Math.random() - 0.5) * currentShake;
-    shakeY += (Math.random() - 0.5) * currentShake;
+      const dx = point.clientX - cx;
+      const dy = point.clientY - cy;
+      const distance = Math.sqrt(dx * dx + dy * dy);
 
-    shakeX *= 0.85;
-    shakeY *= 0.85;
+      const maxDistance = 350;
+      const proximity = Math.max(0, (maxDistance - distance) / maxDistance);
 
-    document.body.style.transform = `translate(${shakeX}px, ${shakeY}px)`;
-    requestAnimationFrame(shakeLoop);
-  }
+      proximitySound.volume = proximity * 0.7;
+      targetShake = 1.2 + proximity * 26;
+    }
 
-  shakeLoop();
+    document.addEventListener('mousemove', handleProximity);
+    document.addEventListener('touchmove', handleProximity, { passive: true });
 
-  /* ===== PROXIMITY ===== */
-  document.addEventListener('mousemove', (e) => {
-    if (!audioReady || !shakingEnabled) return;
+    /* ===== YES CALM ZONE ===== */
+    yesBtn.addEventListener('mouseenter', () => {
+      targetShake = 0;
+    });
 
-    const rect = noBtn.getBoundingClientRect();
-    const cx = rect.left + rect.width / 2;
-    const cy = rect.top + rect.height / 2;
+    yesBtn.addEventListener('mouseleave', () => {
+      targetShake = 0.6;
+    });
 
-    const dx = e.clientX - cx;
-    const dy = e.clientY - cy;
-    const distance = Math.sqrt(dx * dx + dy * dy);
+    yesBtn.addEventListener('touchstart', () => {
+      targetShake = 0;
+    });
 
-    const maxDistance = 350;
-    const proximity = Math.max(0, (maxDistance - distance) / maxDistance);
+    yesBtn.addEventListener('touchend', () => {
+      targetShake = 0.6;
+    });
 
-    // Audio ramps
-    proximitySound.volume = proximity * 0.9;
+    /* ===== PAGE TRANSITION ===== */
+    supBtn.addEventListener('click', () => {
+      page1.classList.add('hidden');
+      page2.classList.remove('hidden');
+    });
 
-    // Shake ramps
-    targetShake = 2 + proximity * 20;
-  });
+    /* ===== YES CLICK ===== */
+    yesBtn.addEventListener('click', () => {
+      shakingEnabled = false;
+      proximitySound.pause();
+      document.body.style.transform = 'translate(0,0)';
 
-  /* ===== YES BUTTON ===== */
-  yesBtn.addEventListener('mouseenter', () => {
-    targetShake = 0;
-  });
+      bgGif.style.opacity = '0';
+      setTimeout(() => {
+        bgGif.style.backgroundImage = `url('${gifAfterYes}')`;
+        bgGif.style.opacity = '1';
+      }, 300);
 
-  yesBtn.addEventListener('click', () => {
-    shakingEnabled = false;
-    proximitySound.pause();
-    document.body.style.transform = 'translate(0,0)';
+      page2.innerHTML = `
+        <h1>YAY 💕</h1>
+        <p>I can’t wait to be your Valentine 🤍</p>
+      `;
+    });
+  </script>
 
-    title.textContent = 'Yay!!! 💘';
-    text.innerHTML = 'You just made me the happiest person ever.<br><br>Will you be my Valentine? 🌹';
-    buttons.classList.add('hidden');
-  });
-</script>
 </body>
 </html>
