--- a/index.html
+++ b/index.html
@@ -177,7 +177,7 @@
     /* =========================
        AUDIO – unlock on first user click (capture runs before button handlers)
     ========================= */
-    const tapSound = new Audio('https://cdn.pixabay.com/download/audio/2022/03/15/audio_7c8a8a1f0a.mp3?filename=pop-94319.mp3');
+    const tapSound = new Audio('valentine-p/Magic Wind Chimes Sound Effect (HD) (mp3cut.net).mp3');
     const successSound = new Audio('https://cdn.pixabay.com/download/audio/2022/08/04/audio_8cfcf61a8b.mp3?filename=success-1-6297.mp3');
     const ambientSound = new Audio('https://cdn.pixabay.com/download/audio/2022/02/23/audio_2c5c9b9f94.mp3?filename=heartbeat-ambient-110624.mp3');
 
